--- a/site/public/dashboard/registro.html
+++ b/site/public/dashboard/registro.html
@@ -50,7 +50,8 @@
     </header>
     <div class="sidebar" id="sidebar">
         <center>
-            <div> <span id="fotoaqui"></span></div>
+            <div id="fotoaqui"></div>
+            <!--  <button onclick="window.location.href ='inicio.html#editandoft'" class="newft">New foto</button> </div>-->
             <h2><span id="b_usuario">Seu Nome</span></h2>
         </center>
         <a href="inicio.html" data-tooltip="Dashboard" id="inicio">
